# drf-rust

./: .gitignore  LICENSE  README.md  README_zh-Hans.md  pyproject.toml
.github/workflows/: release.yml
drf_rust/: __init__.py  field_classifier.py  python_filler.py  schema_builder.py  serializers.py  settings_extractor.py  sql_generator.py
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: datetime.rs  decimal.rs  executor.rs  lib.rs  pool.rs  schema.rs  types.rs
