[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "drf-rust"
version = "0.1.1"
description = "RustModelSerializer: DRF ModelSerializer read accelerated by Rust (PyO3)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "John Tanner", email = "cntianhuan@gmail.com" },
]
keywords = ["django", "rest-framework", "rust", "pyo3", "serializer", "performance", "drf", "accelerated", "acceleration", "accelerator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.0",
    "djangorestframework>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/john-tanner-dev/drf-rust"
Repository = "https://github.com/john-tanner-dev/drf-rust"
"Bug Tracker" = "https://github.com/john-tanner-dev/drf-rust/issues"

[tool.maturin]
manifest-path = "rust_engine/Cargo.toml"
python-source = "."
module-name = "drf_rust.rust_engine"
exclude = ["**/__pycache__/**", "dist/**", "**/target/**"]
