[package]
name = "drf-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py38"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.21"
chrono = "0.4"
chrono-tz = "0.10"
